--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
             <div class="photo-gallery">
                 <div class="photo-frame">
-                    <img src="/b/WhatsApp Image 2026-02-14 at 1.53.31 PM.jpeg" alt="Romantic couple">
+                    <img src="WhatsApp Image 2026-02-14 at 1.53.31 PM.jpeg" alt="Romantic couple">
                 </div>
                 <div class="photo-frame">
                     <img src="/b/WhatsApp Image 2026-02-14 at 1.55.19 PM.jpeg" alt="Romantic sunset">
