--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <img src="/aigchat/WhatsApp Image 2026-02-14 at 1.53.31 PM.jpeg" alt="Romantic couple">
                 </div>
                 <div class="photo-frame">
-                    <img src="/b/WhatsApp Image 2026-02-14 at 1.55.19 PM.jpeg" alt="Romantic sunset">
+                    <img src="/aigchat/WhatsApp Image 2026-02-14 at 1.55.19 PM.jpeg" alt="Romantic sunset">
                 </div>
             </div>
 
@@ -86,7 +86,7 @@
                 <p class="meter-text">Thank you for sending me this video. It's my favorite for Valentine's Day, and it makes me feel so happy. Thanks again for sharing it with me!" 😊</p>
                 <audio id="loveSong" loop>
                     
-                    <source src="/b/WhatsApp Ptt 2026-02-14 at 2.23.04 PM.ogg" type="audio/mpeg">
+                    <source src="/aigchat/WhatsApp Ptt 2026-02-14 at 2.23.04 PM.ogg" type="audio/mpeg">
                 </audio>
                 
             </div>
