--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="love-message">
                 <p class="message">To my dearest Bhuvana,</p>
                 <p class="message-text">
-                    Every moment with you is like a beautiful dream. 
+                    Every moment with you is like a beautiful dreams. 
                     Your smile lights up my world, and your love makes 
                     every day special. Today, I want to remind you how 
                     much you mean to me.
