--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
             <!-- Interactive Question -->
             <div class="question-box">
-                <p class="question">Will you be my Valentine?</p>
+                <p class="question">Will you be my Valentine Bhuvana?</p>
                 <div class="buttons">
                     <button class="btn-yes" id="yesBtn">Yes! ❤️</button>
                     <button class="btn-no" id="noBtn">No</button>
